Remove prefix from old translations

--- a/shared/src/main/resources/locales/locale_fr.json
+++ b/shared/src/main/resources/locales/locale_fr.json
@@ -23,33 +23,33 @@
   "skinsrestorer.completions_skin": "<Skin>",
   "skinsrestorer.completions_skinname": "<NomduSkin>",
   "skinsrestorer.completions_skinurl": "<SkinUrl>",
-  "skinsrestorer.success_updating_skin": "{prefix} &2Votre skin a été mis à jour.",
-  "skinsrestorer.success_updating_skin_other": "{prefix} &2Skin mis à jour pour le joueur {0}.",
+  "skinsrestorer.success_updating_skin": "&2Votre skin a été mis à jour.",
+  "skinsrestorer.success_updating_skin_other": "&2Skin mis à jour pour le joueur {0}.",
   "skinsrestorer.command_server_not_allowed_message": "{préfixe} &4Erreur&8: &cLes commandes ont été désactivées pour le serveur {0}.",
-  "skinsrestorer.player_has_no_permission_skin": "{prefix} &4Erreur&8: &cVous n'avez pas la permission de définir ce skin.",
-  "skinsrestorer.player_has_no_permission_url": "{prefix} &4Erreur&8: &cVous n'avez pas la permission de définir des skins par URL.",
-  "skinsrestorer.not_premium": "{prefix} &4Erreur&8: &cLe joueur Premium avec ce nom n'existe pas.",
-  "skinsrestorer.invalid_player": "{prefix} &4Erreur&8: &c{0} n'est pas un nom d'utilisateur ou une URL valide.",
-  "skinsrestorer.skin_cooldown": "{prefix} &4Erreur&8: &cVous pouvez changer votre skin à nouveau dans &e{0} &csecondes.",
-  "skinsrestorer.ms_updating_skin": "{prefix} &2Téléversement du skin, veuillez patienter...(Cela peut prendre un certain temps)",
-  "skinsrestorer.error_updating_skin": "{prefix} &4Erreur&8: &cUne erreur s'est produite lors de la mise à jour de votre skin. Veuillez réessayer plus tard !",
-  "skinsrestorer.error_updating_url": "{prefix} &4Erreur&8: &cVous ne pouvez pas mettre à jour les skins d'url personnalisés ! \n&cRequêtez à nouveau en utilisant /skin url",
-  "skinsrestorer.error_updating_customskin": "{prefix} &4Erreur&8: &cLe thème ne peut pas être mis à jour car il est personnalisé.",
-  "skinsrestorer.error_invalid_urlskin": "{prefix} &4Erreur&8: &cURL ou format de skin invalide, \n&cEssayez de télécharger votre skin à imgur et faites un clic droit sur 'Copier l'adresse de l'image' \n&cPour le guide, voir : &c&oskinsrestorer.net/skinurl",
-  "skinsrestorer.error_ms_full": "{prefix} &4MS Error&8: &cAPI a expiré pendant le téléchargement de votre &cskin. Veuillez réessayer plus tard. (MineSkin)",
-  "skinsrestorer.error_ms_generic": "{prefix} &4MS Erreur&8: {0}",
-  "skinsrestorer.generic_error": "{prefix} &4Erreur&8: &cUne erreur s'est produite lors de la demande de données de skin, veuillez réessayer plus tard !",
-  "skinsrestorer.wait_a_minute": "{prefix} &4Erreur&8: &cVeuillez attendre une minute avant de demander à nouveau ce skin (Rate Limité)",
-  "skinsrestorer.error_no_skin": "{prefix} &4Erreur&8: &cCe joueur n'a pas de skin défini.",
-  "skinsrestorer.skinsmenu_open": "{prefix} &2Ouverture du menu des skins...",
+  "skinsrestorer.player_has_no_permission_skin": "&4Erreur&8: &cVous n'avez pas la permission de définir ce skin.",
+  "skinsrestorer.player_has_no_permission_url": "&4Erreur&8: &cVous n'avez pas la permission de définir des skins par URL.",
+  "skinsrestorer.not_premium": "&4Erreur&8: &cLe joueur Premium avec ce nom n'existe pas.",
+  "skinsrestorer.invalid_player": "&4Erreur&8: &c{0} n'est pas un nom d'utilisateur ou une URL valide.",
+  "skinsrestorer.skin_cooldown": "&4Erreur&8: &cVous pouvez changer votre skin à nouveau dans &e{0} &csecondes.",
+  "skinsrestorer.ms_updating_skin": "&2Téléversement du skin, veuillez patienter...(Cela peut prendre un certain temps)",
+  "skinsrestorer.error_updating_skin": "&4Erreur&8: &cUne erreur s'est produite lors de la mise à jour de votre skin. Veuillez réessayer plus tard !",
+  "skinsrestorer.error_updating_url": "&4Erreur&8: &cVous ne pouvez pas mettre à jour les skins d'url personnalisés ! \n&cRequêtez à nouveau en utilisant /skin url",
+  "skinsrestorer.error_updating_customskin": "&4Erreur&8: &cLe thème ne peut pas être mis à jour car il est personnalisé.",
+  "skinsrestorer.error_invalid_urlskin": "&4Erreur&8: &cURL ou format de skin invalide, \n&cEssayez de télécharger votre skin à imgur et faites un clic droit sur 'Copier l'adresse de l'image' \n&cPour le guide, voir : &c&oskinsrestorer.net/skinurl",
+  "skinsrestorer.error_ms_full": "&4MS Error&8: &cAPI a expiré pendant le téléchargement de votre &cskin. Veuillez réessayer plus tard. (MineSkin)",
+  "skinsrestorer.error_ms_generic": "&4MS Erreur&8: {0}",
+  "skinsrestorer.generic_error": "&4Erreur&8: &cUne erreur s'est produite lors de la demande de données de skin, veuillez réessayer plus tard !",
+  "skinsrestorer.wait_a_minute": "&4Erreur&8: &cVeuillez attendre une minute avant de demander à nouveau ce skin (Rate Limité)",
+  "skinsrestorer.error_no_skin": "&4Erreur&8: &cCe joueur n'a pas de skin défini.",
+  "skinsrestorer.skinsmenu_open": "&2Ouverture du menu des skins...",
   "skinsrestorer.skinsmenu_title_new": "&9Menu Skins - Page {0}",
   "skinsrestorer.skinsmenu_next_page": "&a&l»&7 Page suivante&a&l »",
   "skinsrestorer.skinsmenu_previous_page": "&e&l«&7 Page Précédente&e&l «",
   "skinsrestorer.skinsmenu_clear_skin": "&c&l[ &7Retirer le skin&c&l ]",
   "skinsrestorer.skinsmenu_select_skin": "&2Cliquez pour sélectionner ce skin",
-  "skinsrestorer.skin_search_message": "{prefix} &2Vous pouvez trouver des skins correspondant &a{0}&2 ici: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Si aucun skin n'est trouvé, vous pouvez toujours trouver des skins sur https://namemc.com/minecraft-skins/tag \nVous pouvez définir le skin en utilisant le lien skin :\n /skin https://namemc.com/skin/",
-  "skinsrestorer.status_ok": "{prefix} &2Connexion API Mojang réussie!",
-  "skinsrestorer.alt_api_failed": "{prefix} &4Erreur&8: &cL'API de données du skin est surchargée, veuillez réessayer plus tard !",
-  "skinsrestorer.no_skin_data": "{prefix} &4Erreur&8: &cAucune donnée de skin acquise ! Est-ce que ce joueur a un skin ?",
-  "skinsrestorer.outdated": "{prefix} &4Vous utilisez une version obsolète de SkinsRestorer!\n&cVeuillez mettre à jour vers la dernière version sur Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
+  "skinsrestorer.skin_search_message": "&2Vous pouvez trouver des skins correspondant &a{0}&2 ici: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Si aucun skin n'est trouvé, vous pouvez toujours trouver des skins sur https://namemc.com/minecraft-skins/tag \nVous pouvez définir le skin en utilisant le lien skin :\n /skin https://namemc.com/skin/",
+  "skinsrestorer.status_ok": "&2Connexion API Mojang réussie!",
+  "skinsrestorer.alt_api_failed": "&4Erreur&8: &cL'API de données du skin est surchargée, veuillez réessayer plus tard !",
+  "skinsrestorer.no_skin_data": "&4Erreur&8: &cAucune donnée de skin acquise ! Est-ce que ce joueur a un skin ?",
+  "skinsrestorer.outdated": "&4Vous utilisez une version obsolète de SkinsRestorer!\n&cVeuillez mettre à jour vers la dernière version sur Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
 }
