--- a/shared/src/main/resources/locales/locale_zh_hk.json
+++ b/shared/src/main/resources/locales/locale_zh_hk.json
@@ -13,34 +13,34 @@
   "skinsrestorer.help_sr_drop": "移除玩家或皮肤数据。",
   "skinsrestorer.help_sr_props": "显示玩家当前的皮肤属性。",
   "skinsrestorer.help_sr_createcustom": "创建一个服务器范围内的自定义皮肤。",
-  "skinsrestorer.success_updating_skin": "{prefix} &2你的皮肤已更新。",
-  "skinsrestorer.success_updating_skin_other": "{prefix} &2已为玩家 {0} 更新皮肤。",
-  "skinsrestorer.command_server_not_allowed_message": "{prefix} &4错误&8: &c服务器 {0} 已禁用该命令。",
-  "skinsrestorer.player_has_no_permission_skin": "{prefix} &4错误&8: &c你没有权限使用该皮肤。",
-  "skinsrestorer.player_has_no_permission_url": "{prefix} &4错误&8: &c你没有权限通过链接设置皮肤。",
-  "skinsrestorer.not_premium": "{prefix} &4错误&8: &c使用该名称的正版玩家不存在。",
-  "skinsrestorer.invalid_player": "{prefix} &4错误&8: &c{0} 不是有效的用户名或链接。",
-  "skinsrestorer.skin_cooldown": "{prefix} &4错误&8: &c你可以在 &e{0} &c秒后再次更换皮肤。",
-  "skinsrestorer.ms_updating_skin": "{prefix} &2正在上传皮肤，请稍候... （这可能需要一些时间）",
-  "skinsrestorer.error_updating_skin": "{prefix} &4错误&8: &c在更新你的皮肤数据时出错，请稍后再试!",
-  "skinsrestorer.error_updating_url": "{prefix} &4错误&8：&c你不能更新自定义链接的皮肤! \n&c请尝试重新使用 /skin url 命令",
-  "skinsrestorer.error_updating_customskin": "{prefix} &4错误&8：&c不能更新自定义皮肤。",
-  "skinsrestorer.error_invalid_urlskin": "{prefix} &4错误&8: &c无效的皮肤链接或格式， \n&c尝试上传你的皮肤到imgur 并右击“复制图像链接” \n&c指南见: &c&oskinsresturer.net/skinurl",
-  "skinsrestorer.error_ms_full": "{prefix} &4MineSkin 错误&8: &c通过API上传你的皮肤时超时。请稍后再试。(MineSkin)",
-  "skinsrestorer.error_ms_generic": "{prefix} &4MineSkin 错误&8: {0}",
-  "skinsrestorer.generic_error": "{prefix} &4错误&8: &c在请求皮肤数据时出错，请稍后再试!",
-  "skinsrestorer.wait_a_minute": "{prefix} &4错误&8: &c请稍等片刻后再请求该皮肤。（访问频率限制）",
-  "skinsrestorer.error_no_skin": "{prefix} &4错误&8: &c该玩家没有设置皮肤。",
-  "skinsrestorer.skinsmenu_open": "{prefix} &7正在打开皮肤菜单……",
+  "skinsrestorer.success_updating_skin": "&2你的皮肤已更新。",
+  "skinsrestorer.success_updating_skin_other": "&2已为玩家 {0} 更新皮肤。",
+  "skinsrestorer.command_server_not_allowed_message": "&4错误&8: &c服务器 {0} 已禁用该命令。",
+  "skinsrestorer.player_has_no_permission_skin": "&4错误&8: &c你没有权限使用该皮肤。",
+  "skinsrestorer.player_has_no_permission_url": "&4错误&8: &c你没有权限通过链接设置皮肤。",
+  "skinsrestorer.not_premium": "&4错误&8: &c使用该名称的正版玩家不存在。",
+  "skinsrestorer.invalid_player": "&4错误&8: &c{0} 不是有效的用户名或链接。",
+  "skinsrestorer.skin_cooldown": "&4错误&8: &c你可以在 &e{0} &c秒后再次更换皮肤。",
+  "skinsrestorer.ms_updating_skin": "&2正在上传皮肤，请稍候... （这可能需要一些时间）",
+  "skinsrestorer.error_updating_skin": "&4错误&8: &c在更新你的皮肤数据时出错，请稍后再试!",
+  "skinsrestorer.error_updating_url": "&4错误&8：&c你不能更新自定义链接的皮肤! \n&c请尝试重新使用 /skin url 命令",
+  "skinsrestorer.error_updating_customskin": "&4错误&8：&c不能更新自定义皮肤。",
+  "skinsrestorer.error_invalid_urlskin": "&4错误&8: &c无效的皮肤链接或格式， \n&c尝试上传你的皮肤到imgur 并右击“复制图像链接” \n&c指南见: &c&oskinsresturer.net/skinurl",
+  "skinsrestorer.error_ms_full": "&4MineSkin 错误&8: &c通过API上传你的皮肤时超时。请稍后再试。(MineSkin)",
+  "skinsrestorer.error_ms_generic": "&4MineSkin 错误&8: {0}",
+  "skinsrestorer.generic_error": "&4错误&8: &c在请求皮肤数据时出错，请稍后再试!",
+  "skinsrestorer.wait_a_minute": "&4错误&8: &c请稍等片刻后再请求该皮肤。（访问频率限制）",
+  "skinsrestorer.error_no_skin": "&4错误&8: &c该玩家没有设置皮肤。",
+  "skinsrestorer.skinsmenu_open": "&7正在打开皮肤菜单……",
   "skinsrestorer.skinsmenu_title_new": "&9皮肤菜单 - 第 {0} 页",
   "skinsrestorer.skinsmenu_next_page": "&a&l»&7 下一页&a&l »",
   "skinsrestorer.skinsmenu_previous_page": "&e&l«&7 上一页&e&l «",
   "skinsrestorer.skinsmenu_clear_skin": "&c&l[ &7删除皮肤&c&l ]",
   "skinsrestorer.skinsmenu_select_skin": "&2点击选择该皮肤",
-  "skinsrestorer.skin_search_message": "{prefix} &2您可以在这里找到匹配 &a{0}&2 的皮肤: \n&ahtps://namemc.com/minecraft-skins/tag/{0} \n\n&2如果找不到皮肤，您可以在 https://namemc.com/minecraft-skins/tag 上找到一些皮肤。 \n您可以通过以下命令使用链接设置皮肤：\n /skin https://namemc.com/skin/",
-  "skinsrestorer.status_ok": "{prefix} &2Mojang API 连接成功!",
-  "skinsrestorer.alt_api_failed": "{prefix} &4错误&8: &c皮肤数据 API 超负荷，请稍后重试!",
-  "skinsrestorer.no_skin_data": "{prefix} &4错误&8: &c没有获取到皮肤数据! 确定这个玩家有皮肤吗?",
-  "skinsrestorer.outdated": "{prefix} &4你正在运行一个旧版本的 SkinsRestorer!\n&c请到 SpigotMC 更新 SkinsRestorer 至最新版本: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
+  "skinsrestorer.skin_search_message": "&2您可以在这里找到匹配 &a{0}&2 的皮肤: \n&ahtps://namemc.com/minecraft-skins/tag/{0} \n\n&2如果找不到皮肤，您可以在 https://namemc.com/minecraft-skins/tag 上找到一些皮肤。 \n您可以通过以下命令使用链接设置皮肤：\n /skin https://namemc.com/skin/",
+  "skinsrestorer.status_ok": "&2Mojang API 连接成功!",
+  "skinsrestorer.alt_api_failed": "&4错误&8: &c皮肤数据 API 超负荷，请稍后重试!",
+  "skinsrestorer.no_skin_data": "&4错误&8: &c没有获取到皮肤数据! 确定这个玩家有皮肤吗?",
+  "skinsrestorer.outdated": "&4你正在运行一个旧版本的 SkinsRestorer!\n&c请到 SpigotMC 更新 SkinsRestorer 至最新版本: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
   "skinsrestorer.custom_help_if_enabled": "  &2&lSkinsRestorer &7- &f&lv{0} \n  &7/skin <皮肤名> &7-&f 更改你的皮肤。\n  &7/skin update &7-&f 更新你的皮肤。\n  &7/skin clear &7-&f 清除你的皮肤。"
 }
