--- a/shared/src/main/resources/locales/locale_es.json
+++ b/shared/src/main/resources/locales/locale_es.json
@@ -22,34 +22,34 @@
   "skinsrestorer.completions_skin": "<Skin>",
   "skinsrestorer.completions_skinname": "<NombreSkin>",
   "skinsrestorer.completions_skinurl": "<UrlSkin>",
-  "skinsrestorer.success_updating_skin": "{prefix} &2Tu skin ha sido actualizada.",
-  "skinsrestorer.success_updating_skin_other": "{prefix} &2La skin de {0} ha sido actualizada.",
-  "skinsrestorer.command_server_not_allowed_message": "{prefix} &4Error&8: &cEl comando han sido deshabilitado para el servidor {0}.",
-  "skinsrestorer.player_has_no_permission_skin": "{prefix} &4Error&8: &cNo tienes permisos para establecerte esta skin.",
-  "skinsrestorer.player_has_no_permission_url": "{prefix} &4Error&8: &cNo tienes permisos para establecerte una skin por URL.",
-  "skinsrestorer.not_premium": "{prefix} &4Error&8: &cNo existe un jugador premium con ese nombre.",
-  "skinsrestorer.invalid_player": "{prefix} &4Error&8: &c{0} no es una URL válida.",
-  "skinsrestorer.skin_cooldown": "{prefix} &4Error&8: &cTe podrás cambiar la skin nuevamente en &e{0} &csegundos.",
-  "skinsrestorer.ms_updating_skin": "{prefix} &2Subiendo su skin, espere por favor (Esto puede tomar un tiempo)",
-  "skinsrestorer.error_updating_skin": "{prefix} &4Error&8: &cUn error ha ocurrido mientras actualizabas tu skin. ¡Inténtalo nuevamente más tarde!",
-  "skinsrestorer.error_updating_url": "{prefix} &4Error&8: &c¡No puede actualizar máscaras de URL personalizadas!\n&cSolicitar de nuevo usando /skin url",
-  "skinsrestorer.error_updating_customskin": "{prefix} &4Error&8: &cLa skin no se puede actualizar porque es personalizada.",
-  "skinsrestorer.error_invalid_urlskin": "{prefix} &4Error&8: &cURL de skin o formato no válido, \n&cIntente cargar su máscara en imgur y haga clic con el botón derecho en 'copiar dirección de imagen' \n&cPara guía ver: &c&oskinsrestorer.net/skinurl",
-  "skinsrestorer.error_ms_full": "{prefix} &4MS Error&8: &cSe agotó el tiempo de espera de la API al cargar su &cskin. Por favor, inténtelo de nuevo más tarde. (MineSkin)",
-  "skinsrestorer.error_ms_generic": "{prefix} &4MS Error&8: {0}",
-  "skinsrestorer.generic_error": "{prefix} &4Error&8: &cOcurrió un error al solicitar los datos de la máscara, ¡inténtalo de nuevo más tarde!",
-  "skinsrestorer.wait_a_minute": "{prefix} &4Error&8: &cEspere un minuto antes de volver a solicitar ese aspecto. (Tarifa limitada)",
-  "skinsrestorer.error_no_skin": "{prefix} &4Error&8: &cEste jugador no tiene conjunto de pieles.",
-  "skinsrestorer.skinsmenu_open": "{prefix} &2Abriendo el menu de skins...",
+  "skinsrestorer.success_updating_skin": "&2Tu skin ha sido actualizada.",
+  "skinsrestorer.success_updating_skin_other": "&2La skin de {0} ha sido actualizada.",
+  "skinsrestorer.command_server_not_allowed_message": "&4Error&8: &cEl comando han sido deshabilitado para el servidor {0}.",
+  "skinsrestorer.player_has_no_permission_skin": "&4Error&8: &cNo tienes permisos para establecerte esta skin.",
+  "skinsrestorer.player_has_no_permission_url": "&4Error&8: &cNo tienes permisos para establecerte una skin por URL.",
+  "skinsrestorer.not_premium": "&4Error&8: &cNo existe un jugador premium con ese nombre.",
+  "skinsrestorer.invalid_player": "&4Error&8: &c{0} no es una URL válida.",
+  "skinsrestorer.skin_cooldown": "&4Error&8: &cTe podrás cambiar la skin nuevamente en &e{0} &csegundos.",
+  "skinsrestorer.ms_updating_skin": "&2Subiendo su skin, espere por favor (Esto puede tomar un tiempo)",
+  "skinsrestorer.error_updating_skin": "&4Error&8: &cUn error ha ocurrido mientras actualizabas tu skin. ¡Inténtalo nuevamente más tarde!",
+  "skinsrestorer.error_updating_url": "&4Error&8: &c¡No puede actualizar máscaras de URL personalizadas!\n&cSolicitar de nuevo usando /skin url",
+  "skinsrestorer.error_updating_customskin": "&4Error&8: &cLa skin no se puede actualizar porque es personalizada.",
+  "skinsrestorer.error_invalid_urlskin": "&4Error&8: &cURL de skin o formato no válido, \n&cIntente cargar su máscara en imgur y haga clic con el botón derecho en 'copiar dirección de imagen' \n&cPara guía ver: &c&oskinsrestorer.net/skinurl",
+  "skinsrestorer.error_ms_full": "&4MS Error&8: &cSe agotó el tiempo de espera de la API al cargar su &cskin. Por favor, inténtelo de nuevo más tarde. (MineSkin)",
+  "skinsrestorer.error_ms_generic": "&4MS Error&8: {0}",
+  "skinsrestorer.generic_error": "&4Error&8: &cOcurrió un error al solicitar los datos de la máscara, ¡inténtalo de nuevo más tarde!",
+  "skinsrestorer.wait_a_minute": "&4Error&8: &cEspere un minuto antes de volver a solicitar ese aspecto. (Tarifa limitada)",
+  "skinsrestorer.error_no_skin": "&4Error&8: &cEste jugador no tiene conjunto de pieles.",
+  "skinsrestorer.skinsmenu_open": "&2Abriendo el menu de skins...",
   "skinsrestorer.skinsmenu_title_new": "&9Menu de Skins- Página {0}",
   "skinsrestorer.skinsmenu_next_page": "&a&l»&7 Próxima pagina&a&l »",
   "skinsrestorer.skinsmenu_previous_page": "&e&l»&7 Anterior pagina&e&l »",
   "skinsrestorer.skinsmenu_clear_skin": "&c&l[ &7Eliminar Skin&c&l ]",
   "skinsrestorer.skinsmenu_select_skin": "&2Clic para seleccionar esta skin.",
-  "skinsrestorer.skin_search_message": "{prefix} &2Puede encontrar skins que coincidan con &a{0}&2 aquí: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Si no se encuentran skins, siempre puede encontrar algunas skins en https://namemc.com/minecraft-skins/tag \nPuede configurar la skin usando el enlace de la skin:\n /skin https://namemc.com/skin/",
-  "skinsrestorer.status_ok": "{prefix} &2Conexion exitosa a la API de Mojang!",
-  "skinsrestorer.alt_api_failed": "{prefix} &4Error&8: &cLa API de datos de skin está sobrecargada, ¡inténtalo de nuevo más tarde!",
-  "skinsrestorer.no_skin_data": "{prefix} &4Error&8: &c¡No se han adquirido datos de skin! ¿Este jugador tiene una skin?",
-  "skinsrestorer.outdated": "{prefix} &4Estas usando una versión vieja de SkinsRestorer!\n&cPuede actualizarlo mediante el siguiente link: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
+  "skinsrestorer.skin_search_message": "&2Puede encontrar skins que coincidan con &a{0}&2 aquí: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Si no se encuentran skins, siempre puede encontrar algunas skins en https://namemc.com/minecraft-skins/tag \nPuede configurar la skin usando el enlace de la skin:\n /skin https://namemc.com/skin/",
+  "skinsrestorer.status_ok": "&2Conexion exitosa a la API de Mojang!",
+  "skinsrestorer.alt_api_failed": "&4Error&8: &cLa API de datos de skin está sobrecargada, ¡inténtalo de nuevo más tarde!",
+  "skinsrestorer.no_skin_data": "&4Error&8: &c¡No se han adquirido datos de skin! ¿Este jugador tiene una skin?",
+  "skinsrestorer.outdated": "&4Estas usando una versión vieja de SkinsRestorer!\n&cPuede actualizarlo mediante el siguiente link: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
   "skinsrestorer.custom_help_if_enabled": "  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <NombreSkin> &7-&f Cambia tu skin. \n    &2/skin update &7-&f Actualiza tu skin. \n    &2/skin clear &7-&f Borra tu skin."
 }
