--- a/shared/src/main/resources/locales/locale_nl.json
+++ b/shared/src/main/resources/locales/locale_nl.json
@@ -23,34 +23,34 @@
   "skinsrestorer.completions_skin": "<Skin>",
   "skinsrestorer.completions_skinname": "<SkinNaam>",
   "skinsrestorer.completions_skinurl": "<SkinLink>",
-  "skinsrestorer.success_updating_skin": "{prefix} &bJe skin is bijgewerkt.",
-  "skinsrestorer.success_updating_skin_other": "{prefix} &2Skin bijgewerkt voor speler {0}.",
-  "skinsrestorer.command_server_not_allowed_message": "{prefix} &4Fout&8: &cCommands zijn uitgeschakeld voor de server {0}.",
-  "skinsrestorer.player_has_no_permission_skin": "{prefix} &4Fout&8: Je hebt geen toestemming om deze skin in te stellen.",
-  "skinsrestorer.player_has_no_permission_url": "{prefix} &4Fout&8: &cJe hebt geen toegang om skins via een link in te stellen.",
-  "skinsrestorer.not_premium": "{prefix} &4Fout:&8: &cPremium speler met die naam bestaat niet.",
-  "skinsrestorer.invalid_player": "{prefix} &4Fout&8: &c{0} is geen geldige gebruikersnaam of URL.",
-  "skinsrestorer.skin_cooldown": "{prefix} &4Fout&8: &cJe kan je skin opnieuw aanpassen over &e{0} &cseconden.",
-  "skinsrestorer.ms_updating_skin": "{prefix} &2Uploaden skin, even geduld...(Dit kan even duren)",
-  "skinsrestorer.error_updating_skin": "{prefix} &4Fout&8: &cEr is een fout opgetreden tijdens het bijwerken van je skin. Probeer het later opnieuw!",
-  "skinsrestorer.error_updating_url": "{prefix} &4Fout&8: &ckan een skin op maat niet updaten! \n&cVerzoek opnieuw via /skin url",
-  "skinsrestorer.error_updating_customskin": "{prefix} &4Fout&8: &cSkin kan niet worden bijgewerkt omdat het op maat is (url).",
-  "skinsrestorer.error_invalid_urlskin": "{prefix} &4Fout&8: &cOngeldige skin url of formaat, \n&cProbeer je skin te uploaden naar imgur en klik met de rechtermuisknop op 'Afbeeldingsadres kopiëren '\n&cVoor handleiding zie: &c&oskinsrestorer.net/skin-url",
-  "skinsrestorer.error_ms_full": "{prefix} &4MS fout&8: &cAPI onderbreking tijdens het uploaden van je &cskin. Probeer het later opnieuw. (MineSkin)",
-  "skinsrestorer.error_ms_generic": "{prefix} &4MS Fout&8: {0}",
-  "skinsrestorer.generic_error": "{prefix} &4Fout&8: &cEr is een fout opgetreden bij het ophalen van de skin gegevens, probeer het later opnieuw!",
-  "skinsrestorer.wait_a_minute": "{prefix} &4Fout&8: &cWacht alsjeblieft een minuut voordat je die skin opnieuw aanvraagt. (Rate Limited)",
-  "skinsrestorer.error_no_skin": "{prefix} &4Fout&8: Deze speler heeft geen skin ingesteld.",
-  "skinsrestorer.skinsmenu_open": "{prefix} &2Openen skins menu...",
+  "skinsrestorer.success_updating_skin": "&bJe skin is bijgewerkt.",
+  "skinsrestorer.success_updating_skin_other": "&2Skin bijgewerkt voor speler {0}.",
+  "skinsrestorer.command_server_not_allowed_message": "&4Fout&8: &cCommands zijn uitgeschakeld voor de server {0}.",
+  "skinsrestorer.player_has_no_permission_skin": "&4Fout&8: Je hebt geen toestemming om deze skin in te stellen.",
+  "skinsrestorer.player_has_no_permission_url": "&4Fout&8: &cJe hebt geen toegang om skins via een link in te stellen.",
+  "skinsrestorer.not_premium": "&4Fout:&8: &cPremium speler met die naam bestaat niet.",
+  "skinsrestorer.invalid_player": "&4Fout&8: &c{0} is geen geldige gebruikersnaam of URL.",
+  "skinsrestorer.skin_cooldown": "&4Fout&8: &cJe kan je skin opnieuw aanpassen over &e{0} &cseconden.",
+  "skinsrestorer.ms_updating_skin": "&2Uploaden skin, even geduld...(Dit kan even duren)",
+  "skinsrestorer.error_updating_skin": "&4Fout&8: &cEr is een fout opgetreden tijdens het bijwerken van je skin. Probeer het later opnieuw!",
+  "skinsrestorer.error_updating_url": "&4Fout&8: &ckan een skin op maat niet updaten! \n&cVerzoek opnieuw via /skin url",
+  "skinsrestorer.error_updating_customskin": "&4Fout&8: &cSkin kan niet worden bijgewerkt omdat het op maat is (url).",
+  "skinsrestorer.error_invalid_urlskin": "&4Fout&8: &cOngeldige skin url of formaat, \n&cProbeer je skin te uploaden naar imgur en klik met de rechtermuisknop op 'Afbeeldingsadres kopiëren '\n&cVoor handleiding zie: &c&oskinsrestorer.net/skin-url",
+  "skinsrestorer.error_ms_full": "&4MS fout&8: &cAPI onderbreking tijdens het uploaden van je &cskin. Probeer het later opnieuw. (MineSkin)",
+  "skinsrestorer.error_ms_generic": "&4MS Fout&8: {0}",
+  "skinsrestorer.generic_error": "&4Fout&8: &cEr is een fout opgetreden bij het ophalen van de skin gegevens, probeer het later opnieuw!",
+  "skinsrestorer.wait_a_minute": "&4Fout&8: &cWacht alsjeblieft een minuut voordat je die skin opnieuw aanvraagt. (Rate Limited)",
+  "skinsrestorer.error_no_skin": "&4Fout&8: Deze speler heeft geen skin ingesteld.",
+  "skinsrestorer.skinsmenu_open": "&2Openen skins menu...",
   "skinsrestorer.skinsmenu_title_new": "&9Skin Menu - Pagina {0}",
   "skinsrestorer.skinsmenu_next_page": "&a&l»&7 Volgende Pagina&a&l »",
   "skinsrestorer.skinsmenu_previous_page": "&e&l«&7 Vorige Pagina&e&l «",
   "skinsrestorer.skinsmenu_clear_skin": "&c&l[ &7Verwijder Skin&c&l ]",
   "skinsrestorer.skinsmenu_select_skin": "&bKlik om deze skin te selecteren",
-  "skinsrestorer.skin_search_message": "{prefix} &bJe kunt skins vinden die overeenkomen met &a{0}&2 hier: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Als er geen skins worden gevonden, kun je altijd wat skins vinden op https://namemc. om/minecraft-skins/tag \nJe kunt de skin instellen met behulp van de skin link:\n /skin https://namemc.com/skin/",
-  "skinsrestorer.status_ok": "{prefix} &2Mojang API verbinding succesvol!",
-  "skinsrestorer.alt_api_failed": "{prefix} &4Error&8: &cSkin Data API is overbelast, probeer het later opnieuw!",
-  "skinsrestorer.no_skin_data": "{prefix} &4Fout&8: &cGeen skin gegevens gevonden! Heeft deze speler een skin?",
-  "skinsrestorer.outdated": "{prefix} &4Je gebruikt een verouderde versie van SkinsRestorer!\n&cUpdate aub naar de laatste versie van Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
+  "skinsrestorer.skin_search_message": "&bJe kunt skins vinden die overeenkomen met &a{0}&2 hier: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Als er geen skins worden gevonden, kun je altijd wat skins vinden op https://namemc. om/minecraft-skins/tag \nJe kunt de skin instellen met behulp van de skin link:\n /skin https://namemc.com/skin/",
+  "skinsrestorer.status_ok": "&2Mojang API verbinding succesvol!",
+  "skinsrestorer.alt_api_failed": "&4Error&8: &cSkin Data API is overbelast, probeer het later opnieuw!",
+  "skinsrestorer.no_skin_data": "&4Fout&8: &cGeen skin gegevens gevonden! Heeft deze speler een skin?",
+  "skinsrestorer.outdated": "&4Je gebruikt een verouderde versie van SkinsRestorer!\n&cUpdate aub naar de laatste versie van Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
   "skinsrestorer.custom_help_if_enabled": "  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinnaam> &7-&f Wijzigt je skin. \n    &2/skin update &7-&f Update je skin. \n    &2/skin clear&7-&f Verwijdert je skin."
 }
