--- a/shared/src/main/resources/locales/locale_zh_tw.json
+++ b/shared/src/main/resources/locales/locale_zh_tw.json
@@ -22,33 +22,33 @@
   "skinsrestorer.completions_skin": "<皮膚>",
   "skinsrestorer.completions_skinname": "<皮膚名稱>",
   "skinsrestorer.completions_skinurl": "<皮膚網址>",
-  "skinsrestorer.success_updating_skin": "{prefix} &2已上傳你的皮膚。",
-  "skinsrestorer.success_updating_skin_other": "{prefix} &2已上傳 {0} 的皮膚。",
-  "skinsrestorer.command_server_not_allowed_message": "{prefix} &4錯誤&8: &c指令已被伺服器 {0} 禁用。",
-  "skinsrestorer.player_has_no_permission_skin": "{prefix} &4錯誤&8: &c你沒有設定此皮膚的權限。",
-  "skinsrestorer.player_has_no_permission_url": "{prefix} &4錯誤&8: &c你沒有使用網址設定皮膚的權限。",
-  "skinsrestorer.not_premium": "{prefix} &4錯誤&8: &c找不到該名稱的正版玩家。",
-  "skinsrestorer.invalid_player": "{prefix} &4錯誤&8: &c{0} 不是一個有效的使用者名稱或網址。",
-  "skinsrestorer.skin_cooldown": "{prefix} &4錯誤&8: &c你可以在 &e{0} &c 秒後再次更換皮膚。",
-  "skinsrestorer.ms_updating_skin": "{prefix} &2上傳皮膚中，請稍後... (這需要一些時間)",
-  "skinsrestorer.error_updating_skin": "{prefix} &4錯誤&8: &c更新你的皮膚時發生了錯誤。 請稍後再試!",
-  "skinsrestorer.error_updating_url": "{prefix} &4錯誤&8: &c你不能更新自訂網址皮膚! \\\n&c使用 /skin url 再請求一次",
-  "skinsrestorer.error_updating_customskin": "{prefix} &4錯誤&8: &c皮膚不能被更新，因為它的自訂。",
-  "skinsrestorer.error_invalid_urlskin": "{prefix} &4錯誤&8: &c無效的皮膚網址或格式， \n&c試著上傳你的皮膚到Imgur，然後右鍵 'copy image address' \n&c教學請見: &c&oskinsrestorer.net/skinurl",
-  "skinsrestorer.error_ms_full": "{prefix} &4MS 錯誤&8: &c上傳你的皮膚時API超時了。 請稍後再試。 (MineSkin)",
-  "skinsrestorer.error_ms_generic": "{prefix} &4MS 錯誤&8: {0}",
-  "skinsrestorer.generic_error": "{prefix} &4錯誤&8: &c請求皮膚資料時發生了錯誤，請稍後再試!",
-  "skinsrestorer.wait_a_minute": "{prefix} &4錯誤&8: &c請在再次請求那個皮膚之前等待一分鐘。 (速率限制)",
-  "skinsrestorer.error_no_skin": "{prefix} &4錯誤&8: &c此玩家沒有設定皮膚。",
-  "skinsrestorer.skinsmenu_open": "{prefix} &2正在開啟皮膚選單...",
+  "skinsrestorer.success_updating_skin": "&2已上傳你的皮膚。",
+  "skinsrestorer.success_updating_skin_other": "&2已上傳 {0} 的皮膚。",
+  "skinsrestorer.command_server_not_allowed_message": "&4錯誤&8: &c指令已被伺服器 {0} 禁用。",
+  "skinsrestorer.player_has_no_permission_skin": "&4錯誤&8: &c你沒有設定此皮膚的權限。",
+  "skinsrestorer.player_has_no_permission_url": "&4錯誤&8: &c你沒有使用網址設定皮膚的權限。",
+  "skinsrestorer.not_premium": "&4錯誤&8: &c找不到該名稱的正版玩家。",
+  "skinsrestorer.invalid_player": "&4錯誤&8: &c{0} 不是一個有效的使用者名稱或網址。",
+  "skinsrestorer.skin_cooldown": "&4錯誤&8: &c你可以在 &e{0} &c 秒後再次更換皮膚。",
+  "skinsrestorer.ms_updating_skin": "&2上傳皮膚中，請稍後... (這需要一些時間)",
+  "skinsrestorer.error_updating_skin": "&4錯誤&8: &c更新你的皮膚時發生了錯誤。 請稍後再試!",
+  "skinsrestorer.error_updating_url": "&4錯誤&8: &c你不能更新自訂網址皮膚! \\\n&c使用 /skin url 再請求一次",
+  "skinsrestorer.error_updating_customskin": "&4錯誤&8: &c皮膚不能被更新，因為它的自訂。",
+  "skinsrestorer.error_invalid_urlskin": "&4錯誤&8: &c無效的皮膚網址或格式， \n&c試著上傳你的皮膚到Imgur，然後右鍵 'copy image address' \n&c教學請見: &c&oskinsrestorer.net/skinurl",
+  "skinsrestorer.error_ms_full": "&4MS 錯誤&8: &c上傳你的皮膚時API超時了。 請稍後再試。 (MineSkin)",
+  "skinsrestorer.error_ms_generic": "&4MS 錯誤&8: {0}",
+  "skinsrestorer.generic_error": "&4錯誤&8: &c請求皮膚資料時發生了錯誤，請稍後再試!",
+  "skinsrestorer.wait_a_minute": "&4錯誤&8: &c請在再次請求那個皮膚之前等待一分鐘。 (速率限制)",
+  "skinsrestorer.error_no_skin": "&4錯誤&8: &c此玩家沒有設定皮膚。",
+  "skinsrestorer.skinsmenu_open": "&2正在開啟皮膚選單...",
   "skinsrestorer.skinsmenu_title_new": "&9皮膚選單 - 第 {0} 頁",
   "skinsrestorer.skinsmenu_next_page": "&a&l»&7 下一頁&a&l »",
   "skinsrestorer.skinsmenu_previous_page": "&e&l«&7 上一頁&e&l «",
   "skinsrestorer.skinsmenu_clear_skin": "&c&l[ &7移除皮膚&c&l ]",
   "skinsrestorer.skinsmenu_select_skin": "&2點擊以選擇這個皮膚",
-  "skinsrestorer.skin_search_message": "{prefix} &2你可以在下列網址找到符合 &a{0}&2 的皮膚: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2如果沒有找到皮膚，你可以隨時在 https://namemc.com/minecraft-skins/tag 找到一些皮膚 \n你可以使用皮膚網址設定皮膚:\n /skin https://namemc.com/skin/",
-  "skinsrestorer.status_ok": "{prefix} &2Mojang API連接成功!",
-  "skinsrestorer.alt_api_failed": "{prefix} &4錯誤&8: &c皮膚資料API已超載，請稍後再試!",
-  "skinsrestorer.no_skin_data": "{prefix} &4錯誤&8: &c沒有獲得任何皮膚資料! 這個玩家有皮膚嗎?",
-  "skinsrestorer.outdated": "{prefix} &4你在使用舊版的SkinsRestorer!\n&c請更新到Spigot上的最新版本: &ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
+  "skinsrestorer.skin_search_message": "&2你可以在下列網址找到符合 &a{0}&2 的皮膚: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2如果沒有找到皮膚，你可以隨時在 https://namemc.com/minecraft-skins/tag 找到一些皮膚 \n你可以使用皮膚網址設定皮膚:\n /skin https://namemc.com/skin/",
+  "skinsrestorer.status_ok": "&2Mojang API連接成功!",
+  "skinsrestorer.alt_api_failed": "&4錯誤&8: &c皮膚資料API已超載，請稍後再試!",
+  "skinsrestorer.no_skin_data": "&4錯誤&8: &c沒有獲得任何皮膚資料! 這個玩家有皮膚嗎?",
+  "skinsrestorer.outdated": "&4你在使用舊版的SkinsRestorer!\n&c請更新到Spigot上的最新版本: &ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
 }
