--- a/shared/src/main/resources/locales/locale_es_AR.json
+++ b/shared/src/main/resources/locales/locale_es_AR.json
@@ -11,17 +11,6 @@
   "skinsrestorer.help_sr_status": "Comprueba los servicios API necesarios del complemento.",
   "skinsrestorer.help_sr_drop": "Elimina los jugadores o los datos de la skin.",
   "skinsrestorer.help_sr_props": "Muestra las propiedades de la skin actual de los jugadores.",
-  "skinsrestorer.help_sr_createcustom": "Cree una skin personalizada para todo el servidor.",
-  "skinsrestorer.syntax_defaultcommand": "<Skin/URL>",
-  "skinsrestorer.syntax_skinset": "<Skin>",
-  "skinsrestorer.syntax_skinset_other": "<Jugador> <Skin/URL>",
-  "skinsrestorer.syntax_skinurl": "<UrlSkin> [classic/slim]",
-  "skinsrestorer.syntax_skinsearch": "<Buscar>",
-  "skinsrestorer.syntax_skinupdate_other": "<Jugador>",
-  "skinsrestorer.syntax_skinclear_other": "<Jugador>",
-  "skinsrestorer.completions_skin": "<Skin>",
-  "skinsrestorer.completions_skinname": "<NombreSkin>",
-  "skinsrestorer.completions_skinurl": "<UrlSkin>",
   "skinsrestorer.success_updating_skin": "&2Tu skin ha sido actualizada.",
   "skinsrestorer.success_updating_skin_other": "&2La skin de {0} ha sido actualizada.",
   "skinsrestorer.command_server_not_allowed_message": "&4Error&8: &cEl comando han sido deshabilitado para el servidor {0}.",
@@ -50,6 +39,5 @@
   "skinsrestorer.status_ok": "&2Conexion exitosa a la API de Mojang!",
   "skinsrestorer.alt_api_failed": "&4Error&8: &cLa API de datos de skin está sobrecargada, ¡inténtalo de nuevo más tarde!",
   "skinsrestorer.no_skin_data": "&4Error&8: &c¡No se han adquirido datos de skin! ¿Este jugador tiene una skin?",
-  "skinsrestorer.outdated": "&4Estas usando una versión vieja de SkinsRestorer!\n&cPuede actualizarlo mediante el siguiente link: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/",
-  "skinsrestorer.custom_help_if_enabled": "  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <NombreSkin> &7-&f Cambia tu skin. \n    &2/skin update &7-&f Actualiza tu skin. \n    &2/skin clear &7-&f Borra tu skin."
+  "skinsrestorer.outdated": "&4Estas usando una versión vieja de SkinsRestorer!\n&cPuede actualizarlo mediante el siguiente link: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
 }
