--- a/shared/src/main/resources/locales/locale.json
+++ b/shared/src/main/resources/locales/locale.json
@@ -37,11 +37,9 @@
   "skinsrestorer.error_updating_url": "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url",
   "skinsrestorer.error_updating_customskin": "&4Error&8: &cSkin can't be updated because its custom.",
   "skinsrestorer.error_invalid_urlskin": "&4Error&8: &cInvalid skin url or format, \n&cTry uploading your skin to imgur and right click 'copy image address' \n&cFor guide see: &c&oskinsrestorer.net/skinurl",
-  "skinsrestorer.error_admin_applyskin": "&4ERROR&8: &cplayer skin could NOT be refreshed!",
-  "skinsrestorer.error_ms_full": "&4MS Error&8: &cAPI timed out while uploading your &cskin. Please try again later. (MineSkin)",
-  "skinsrestorer.error_ms_generic": "&4MS Error&8: {0}",
+  "skinsrestorer.error_admin_applyskin": "&4Error&8: &cPlayer skin could NOT be refreshed!",
+  "skinsrestorer.error_ms_full": "&4Error&8: &cMineSKin API timed out while uploading your &cskin. Please try again later.",
   "skinsrestorer.error_ms_api_failed": "&4Error&8: &cMineSkin API is overloaded, please try again later!",
-  "skinsrestorer.error_no_skin": "&4Error&8: &cThis player has no skin set.",
   "skinsrestorer.command_server_not_allowed_message": "&4Error&8: &cCommands have been disabled for the server {0}.",
   "skinsrestorer.player_has_no_permission_skin": "&4Error&8: &cYou don't have permission to set this skin.",
   "skinsrestorer.player_has_no_permission_url": "&4Error&8: &cYou don't have permission to set skins by URL.",
@@ -50,7 +48,7 @@
   "skinsrestorer.only_allowed_on_player": "&4Error&8: &cOnly players may execute this command!",
   "skinsrestorer.invalid_player": "&4Error&8: &c{0} is not a valid username or URL.",
   "skinsrestorer.skin_cooldown": "&4Error&8: &cYou can change your skin again in &e{0} &cseconds.",
-  "skinsrestorer.ms_updating_skin": "&2Uploading skin, please wait...(This may take up some time)",
+  "skinsrestorer.ms_updating_skin": "&2Uploading skin, please wait... (This may take up some time)",
   "skinsrestorer.generic_error": "&4Error&8: &cAn error occurred while requesting skin data, please try again later!",
   "skinsrestorer.wait_a_minute": "&4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)",
   "skinsrestorer.permission_player_wildcard": "Wildcard permission for players",
@@ -85,8 +83,6 @@
   "skinsrestorer.skinsmenu_clear_skin": "&c&l[ &7Remove Skin&c&l ]",
   "skinsrestorer.skinsmenu_select_skin": "&2Click to select this skin",
   "skinsrestorer.skin_search_message": "&2You can find skins matching &a{0}&2 here: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/",
-  "skinsrestorer.status_ok": "&2Mojang API connection successful!",
-  "skinsrestorer.alt_api_failed": "&4Error&8: &cSkin Data API is overloaded, please try again later!",
   "skinsrestorer.no_skin_data": "&4Error&8: &cNo skin data acquired! Does this player have a skin?",
   "skinsrestorer.outdated": "&4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
 }
