Migrate last conditions to messages and print commit along startup message

--- a/shared/src/main/resources/locales/locale.json
+++ b/shared/src/main/resources/locales/locale.json
@@ -40,7 +40,8 @@
   "skinsrestorer.error_admin_applyskin": "&4Error&8: &cPlayer skin could NOT be refreshed!",
   "skinsrestorer.error_ms_full": "&4Error&8: &cMineSKin API timed out while uploading your &cskin. Please try again later.",
   "skinsrestorer.error_ms_api_failed": "&4Error&8: &cMineSkin API is overloaded, please try again later!",
-  "skinsrestorer.command_server_not_allowed_message": "&4Error&8: &cCommands have been disabled for the server {0}.",
+  "skinsrestorer.not_connected_to_server": "&cYou are not connected to any server.",
+  "skinsrestorer.command_server_not_allowed_message": "&cCommands have been disabled for the server {0}.",
   "skinsrestorer.player_has_no_permission_skin": "&4Error&8: &cYou don't have permission to set this skin.",
   "skinsrestorer.player_has_no_permission_url": "&4Error&8: &cYou don't have permission to set skins by URL.",
   "skinsrestorer.not_premium": "&4Error&8: &cPremium player with that name does not exist.",
