--- a/shared/src/main/resources/locales/locale_nl.json
+++ b/shared/src/main/resources/locales/locale_nl.json
@@ -1,7 +1,7 @@
 {
   "skinsrestorer.help_skin_set": "Werkt je skin bij.",
   "skinsrestorer.help_skin_set_other": "Stelt de skin van een andere speler in.",
-  "skinsrestorer.help_skin_set_other_url": "Stelt de skin van een andere speler via link in.",
+  "skinsrestorer.help_skin_set_url": "Stelt de skin van een andere speler via link in.",
   "skinsrestorer.help_skin_clear": "Verwijdert je skin.",
   "skinsrestorer.help_skin_clear_other": "Verwijdert de skin van een andere speler.",
   "skinsrestorer.help_skin_search": "Zoek een skin die je wilt",
