--- a/shared/src/main/resources/locales/locale_ru.json
+++ b/shared/src/main/resources/locales/locale_ru.json
@@ -1,7 +1,7 @@
 {
   "skinsrestorer.help_skin_set": "Изменяет ваш скин.",
   "skinsrestorer.help_skin_set_other": "Устанавливает скин выбранному игроку.",
-  "skinsrestorer.help_skin_set_other_url": "Устанавливает скин выбранному игроку по ссылке.",
+  "skinsrestorer.help_skin_set_url": "Устанавливает скин выбранному игроку по ссылке.",
   "skinsrestorer.help_skin_clear": "Очищает ваш скин.",
   "skinsrestorer.help_skin_clear_other": "Очищает скин выбранного игрока.",
   "skinsrestorer.help_skin_search": "Поиск скина, который вы желаете",
