--- a/shared/src/main/resources/locales/locale_zh_tw.json
+++ b/shared/src/main/resources/locales/locale_zh_tw.json
@@ -1,7 +1,7 @@
 {
   "skinsrestorer.help_skin_set": "更改你的皮膚。",
   "skinsrestorer.help_skin_set_other": "為指定的玩家設定皮膚。",
-  "skinsrestorer.help_skin_set_other_url": "為指定的玩家設定從網址來的皮膚。",
+  "skinsrestorer.help_skin_set_url": "為指定的玩家設定從網址來的皮膚。",
   "skinsrestorer.help_skin_clear": "清除你的皮膚。",
   "skinsrestorer.help_skin_clear_other": "為指定的玩家清除皮膚。",
   "skinsrestorer.help_skin_search": "搜尋一個你想要的皮膚",
