--- a/shared/src/main/resources/locales/locale_zh_hk.json
+++ b/shared/src/main/resources/locales/locale_zh_hk.json
@@ -1,7 +1,7 @@
 {
   "skinsrestorer.help_skin_set": "更改您的皮肤。",
   "skinsrestorer.help_skin_set_other": "为目标玩家设置皮肤。",
-  "skinsrestorer.help_skin_set_other_url": "使用链接为目标玩家设置皮肤。",
+  "skinsrestorer.help_skin_set_url": "使用链接为目标玩家设置皮肤。",
   "skinsrestorer.help_skin_clear": "清除你的皮肤。",
   "skinsrestorer.help_skin_clear_other": "清除目标玩家的皮肤。",
   "skinsrestorer.help_skin_search": "搜索你想要的皮肤",
