Cleanup and fix condition issue

--- a/shared/src/main/resources/locales/locale.json
+++ b/shared/src/main/resources/locales/locale.json
@@ -1,8 +1,8 @@
 {
   "skinsrestorer.prefix_format": "&e[&2SkinsRestorer&e] {0}",
-  "skinsrestorer.help_skin": "Main command.",
+  "skinsrestorer.help_skin": "Changes your skin.",
   "skinsrestorer.help_skins": "Opens skins GUI.",
-  "skinsrestorer.help_sr": "Admin commands.",
+  "skinsrestorer.help_sr": "Admin commands for SkinsRestorer.",
   "skinsrestorer.help_skin_set": "Changes your skin.",
   "skinsrestorer.help_skin_set_other": "Sets the skin for a target player.",
   "skinsrestorer.help_skin_set_url": "Sets the skin from an url.",
@@ -22,7 +22,7 @@
   "skinsrestorer.help_sr_purge_old_data": "Purge old skin data from over x days ago.",
   "skinsrestorer.help_sr_dump": "Upload support data to bytebin.lucko.me.",
   "skinsrestorer.success_skin_change": "&2Your skin has been changed.",
-  "skinsrestorer.success_skin_change_other": "&2You set {0}'s skin.",
+  "skinsrestorer.success_skin_change_other": "&2You changed the skin of {0}.",
   "skinsrestorer.success_skin_clear": "&2Your skin has been cleared.",
   "skinsrestorer.success_skin_clear_other": "&2Skin cleared for player {0}.",
   "skinsrestorer.success_updating_skin": "&2Your skin has been updated.",
